--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <mat-toolbar color="primary" class="mat-elevation-z3">
+  <span class="spacer"></span>
   <span>{{ username }}'s To Do List</span>
+  <span class="spacer"></span>
   <mat-icon matBadge="{{ itemCount }}" matBadgeColor="accent">
     checklist
   </mat-icon>
