--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,3 +6,26 @@
     checklist
   </mat-icon>
 </mat-toolbar>
+
+<div class="tableContainer">
+  <table mat-table [dataSource]="items">
+    
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef>#</th>
+      <td mat-cell *matCell="let i = index">{{ i + 1 }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="task">
+      <th mat-header-cell *matHeaderCellDef>Task</th>
+      <td mat-cell *matCellDef="let item">{{ item.task }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="done">
+      <th mat-header-cell *matHeaderCellDef>Done</th>
+      <td mat-cell *matCellDef="let item">{{ item.complete }}</td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="['id', 'task', 'done']"></tr>
+    <tr mat-row *matRowDef="let row; columns: ['id', 'task', 'done']"></tr>
+  </table>
+</div>
