--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,11 +8,11 @@
 </mat-toolbar>
 
 <div class="tableContainer">
-  <table mat-table [dataSource]="items">
+  <table mat-table [dataSource]="items" class="mat-elevation-z3 fullWidth">
     
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef>#</th>
-      <td mat-cell *matCell="let i = index">{{ i + 1 }}</td>
+      <td mat-cell *matCellDef="let i = index">{{ i + 1 }}</td>
     </ng-container>
 
     <ng-container matColumnDef="task">
