--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,6 @@
 
 <div class="tableContainer">
   <table mat-table [dataSource]="items" class="mat-elevation-z3 fullWidth">
-    
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef>#</th>
       <td mat-cell *matCellDef="let i = index">{{ i + 1 }}</td>
@@ -22,7 +21,11 @@
 
     <ng-container matColumnDef="done">
       <th mat-header-cell *matHeaderCellDef>Done</th>
-      <td mat-cell *matCellDef="let item">{{ item.complete }}</td>
+      <td mat-cell *matCellDef="let item">
+        <mat-checkbox [(ngModel)]="item.complete" color="primary">
+          {{ item.complete }}
+        </mat-checkbox>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="['id', 'task', 'done']"></tr>
