--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,22 @@
   </mat-icon>
 </mat-toolbar>
 
+<div class="inputContainer">
+  <mat-form-field class="fullWidth">
+    <mat-label style="padding-left: 5px">New To Do</mat-label>
+    <input matInput placeholder="Enter to-do description" #todoText />
+    <button
+      matSuffix
+      mat-raised-button
+      color="accent"
+      class="addButton"
+      (click)="addItem(todoText.value); todoText.value = ''"
+    >
+      Add
+    </button>
+  </mat-form-field>
+</div>
+
 <div class="tableContainer">
   <table mat-table [dataSource]="items" class="mat-elevation-z3 fullWidth">
     <ng-container matColumnDef="id">
