--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,7 +39,7 @@
       <th mat-header-cell *matHeaderCellDef>Done</th>
       <td mat-cell *matCellDef="let item">
         <mat-checkbox [(ngModel)]="item.complete" color="primary">
-          {{ item.complete }}
+          <!-- {{ item.complete }} -->
         </mat-checkbox>
       </td>
     </ng-container>
@@ -47,4 +47,12 @@
     <tr mat-header-row *matHeaderRowDef="['id', 'task', 'done']"></tr>
     <tr mat-row *matRowDef="let row; columns: ['id', 'task', 'done']"></tr>
   </table>
+</div>
+
+<div class="toggleContainer">
+  <span class="spacer"></span>
+  <mat-slide-toggle [(ngModel)]="showComplete">
+    Show Completed Items
+  </mat-slide-toggle>
+  <span class="spacer"></span>
 </div>
